syntax = "proto3";

package githubusers.v1;

option go_package = "github.com/unkabogaton/github-users/internal/infrastructure/grpc/gen;gen";

message Empty {}

message User {
  int64 id = 1;
  string login = 2;
  string node_id = 3;
  string avatar_url = 4;
  string url = 5;
  string html_url = 6;
  string type = 7;
  string user_view_type = 8;
  bool site_admin = 9;
}

message UserList {
  repeated User users = 1;
}

message ListUsersRequest {
  int32 limit = 1;
  int32 page = 2;
  string order_by = 3;
  string order_direction = 4;
}

message GetUserRequest {
  string username = 1;
}

message UpdateUserRequest {
  string username = 1;
  string login = 2;
  string node_id = 3;
  string avatar_url = 4;
  string url = 5;
  string html_url = 6;
  string type = 7;
  string user_view_type = 8;
  bool site_admin = 9;
}

message DeleteUserRequest {
  string username = 1;
}

message DeleteUserResponse {
  string username = 1;
}

service UserService {
  rpc ListUsers (ListUsersRequest) returns (UserList);
  rpc GetUser (GetUserRequest) returns (User);
  rpc UpdateUser (UpdateUserRequest) returns (User);
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
}


